--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Testing 1...2...3... Testing</title>
+    <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -11,7 +11,7 @@
     
     <div class="row">
       <div class="large-12 columns">
-        <h1>Thanks for Creeping on my GitHub</h1>
+        <h1>Welcome to Foundation</h1>
       </div>
     </div>
     
@@ -36,19 +36,11 @@
       </div>
     </div>
 
-<<<<<<< Updated upstream
-<head>
-  <meta charset="utf-8">
-  <!-- If you delete this meta tag World War Z will become a reality -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Benjamin Glassman</title>
-=======
+
     <div class="row">
       <div class="large-8 medium-8 columns">
         <h5>Here&rsquo;s your basic grid:</h5>
         <!-- Grid Example -->
->>>>>>> Stashed changes
-
         <div class="row">
           <div class="large-12 columns">
             <div class="callout panel">
