--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Test<h2>
     <p id="demo"></p>
   <!--JavaScript Stuff!-->
-  <script src="main.js"></script>
+  <script src="/js/main.js"></script>
   <script>
     $(document).foundation();
   </script>
