--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h2>Test<h2>
     <p id="demo"></p>
+    <p id="test1"></p>
   <!--JavaScript Stuff!-->
   <script src="/js/main.js"></script>
   <script>
