--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testing...1...2...3...Testing</title>
-
+    <link rel="stylesheet" href="css/foundation.css" />
+    <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
     <h2>Test<h2>
     <p id="demo"></p>
     <p id="test1"></p>
   <!--JavaScript Stuff!-->
-  
+  <script src="/js/main.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
   </body>
 </html>
