--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Testing...1...2...3...Testing</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <script src="js/vendor/modernizr.js"></script>
-  </head>
-  <body>
-    <h2>Test<h2>
-    <p id="demo"></p>
-    
-  <!--JavaScript Stuff!-->
-  <script src="/js/main.js"></script>
-  <script>
-    $(document).foundation();
-  </script>
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="css/app.css">
+</head>
+<body>
+
+<h1>Testing, EventTime, Result, see log</h1>
+
+
+
+<svg id="visualisation" width="1000" height="500"></svg>
+<p id="demo">
+<p id="test1">
+<p id="test2">
+
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="js/main.js"></script>
+
+</body>
 </html>
